--- a/src/app/screens/posts/company-posts-list/components/company-posts-list-screen.component.html
+++ b/src/app/screens/posts/company-posts-list/components/company-posts-list-screen.component.html
@@ -1,4 +1,4 @@
-<h1 class="title">As minhas equipas</h1>
+<h1 class="title">As minhas Publicações</h1>
 <app-posts-list
     [posts]="posts"
     [businessAreaOptions]="businessAreaOptions$ | async"
