--- a/src/app/screens/posts/edit-equipa/components/add-equipa-view/edit-equipa-view.component.html
+++ b/src/app/screens/posts/edit-equipa/components/add-equipa-view/edit-equipa-view.component.html
@@ -15,7 +15,7 @@
         class="button"
         type="button"
         size="fit"
-        label="Apagar Equipa"
+        label="Apagar Publicação"
         (click)="deleteTeam()"
     ></app-button> -->
 </app-equipa-form-container>
