--- a/src/app/screens/posts/posts-list/components/posts-list-screen.component.html
+++ b/src/app/screens/posts/posts-list/components/posts-list-screen.component.html
@@ -1,4 +1,4 @@
-<h1 class="title">Equipas disponíveis</h1>
+<h1 class="title">Publicações</h1>
 <app-posts-list
     [posts]="posts"
     [businessAreaOptions]="businessAreaOptions$ | async"
