--- a/src/app/screens/posts/close-post/components/close-post-view/close-post-view.component.html
+++ b/src/app/screens/posts/close-post/components/close-post-view/close-post-view.component.html
@@ -1,1 +1,40 @@
-<p>close-post-view works!</p>
+<h1 class="title">Encerrar publicação</h1>
+<h2 class="subtitle????">Quer encerrar a publicação da equipa {{ currentPosting.title }}?</h2>
+<h2 class="subtitle????">Esta ação não pode ser revetida.</h2>
+<form [formGroup]="form" (submit)="onSubmit()">
+    <div class="form-fields">
+        <fieldset class="field-container">
+            <label class="label" for="reason">Qual é o motivo para encerrar esta publicação?</label>
+            <app-input-select
+                formControlName="reason"
+                [inputSelectOptions]="reasonOptions$ | async"
+                placeholder="Selecione o principal motivo"
+            ></app-input-select>
+            <div *ngIf="reasonControl.errors?.required" class="error-message">
+                Campo obrigatório
+            </div>
+        </fieldset>
+        <fieldset class="field-container">
+            <label class="label" for="details">Detalhes</label>
+            <app-input-textarea
+                class="textarea"
+                formControlName="details"
+                placeholder=""
+            ></app-input-textarea>
+        </fieldset>
+    </div>
+    <div class="buttons-container columns">
+        <div class="column">
+            <div *ngIf="reponseError" class="error-message">
+                Ocorreu um erro, por favor tente novamente!
+            </div>
+            <app-button
+                label="Encerrar publicação"
+                type="submit"
+                [iconStatus]="submitting && buttonStatus"
+                class="button-submit"
+            ></app-button>
+        </div>
+        <app-button label="Manter publicação" class="button" theme="secundary"></app-button>
+    </div>
+</form>
