--- a/src/app/components/pop-up/pop-up.component.html
+++ b/src/app/components/pop-up/pop-up.component.html
@@ -1,32 +1,10 @@
 <div class="layer">
     <div class="pop-up-container">
         <h1 class="title">{{ title }}</h1>
-        <div class="info-text">
-            {{ infoText }}
-        </div>
+        <div class="info-text" [innerHTML]="infoText"></div>
         <form [formGroup]="form" (submit)="onSubmit()">
             <div class="form-fields">
-                <fieldset class="field-container">
-                    <label class="label" for="reason"
-                        >Qual é o motivo para encerrar esta publicação?</label
-                    >
-                    <app-input-select
-                        formControlName="reason"
-                        [inputSelectOptions]="reasonOptions$ | async"
-                        placeholder="Selecione o principal motivo"
-                    ></app-input-select>
-                    <div *ngIf="reasonControl.errors?.required" class="error-message">
-                        Campo obrigatório
-                    </div>
-                </fieldset>
-                <fieldset class="field-container">
-                    <label class="label" for="details">Detalhes</label>
-                    <app-input-textarea
-                        class="textarea"
-                        formControlName="details"
-                        placeholder=""
-                    ></app-input-textarea>
-                </fieldset>
+                <ng-content></ng-content>
             </div>
             <div class="buttons-container columns">
                 <div class="column">
@@ -34,17 +12,17 @@
                         Ocorreu um erro, por favor tente novamente!
                     </div>
                     <app-button
-                        label="Encerrar publicação"
+                        [label]="confirmButtonLabel"
                         type="submit"
                         [iconStatus]="submitting && buttonStatus"
                         class="button-submit"
                     ></app-button>
                 </div>
                 <app-button
-                    label="Manter publicação"
+                    [label]="abortButtonLabel"
                     class="button column"
                     theme="secundary"
-                    (click)="navigateBack()"
+                    (click)="onAbort()"
                 ></app-button>
             </div>
         </form>
