--- a/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.html
+++ b/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.html
@@ -98,7 +98,7 @@
             label="Editar"
         ></app-button>
         <app-button
-            [url]="closePostUrl"
+            (click)="openClosePostPopUp()"
             theme="secundary"
             class="button column"
             type="button"
@@ -107,3 +107,36 @@
         ></app-button>
     </div>
 </div>
+<app-pop-up
+    *ngIf="closingPost"
+    title="Encerrar publicação"
+    infoText="Quer encerrar a publicação da equipa {{
+        posting.title
+    }}?<br>Esta ação não pode ser revertida."
+    [form]="this.closePostForm"
+    confirmButtonLabel="Encerrar publicação"
+    abortButtonLabel="Manter publicação"
+    (onClosePopUp)="closeClosePostPopUp()"
+>
+    <fieldset class="field-container">
+        <label class="label" for="closePostReason"
+            >Qual é o motivo para encerrar esta publicação?</label
+        >
+        <app-input-select
+            formControlName="closePostReason"
+            [inputSelectOptions]="closePostReasonOptions$ | async"
+            placeholder="Selecione o principal motivo"
+        ></app-input-select>
+        <div *ngIf="closePostReasonControl.errors?.required" class="error-message">
+            Campo obrigatório
+        </div>
+    </fieldset>
+    <fieldset class="field-container">
+        <label class="label" for="closePostDetails">Detalhes</label>
+        <app-input-textarea
+            class="textarea"
+            formControlName="closePostDetails"
+            placeholder=""
+        ></app-input-textarea>
+    </fieldset>
+</app-pop-up>
