updating pop up component css and TS

--- a/src/app/components/pop-up/pop-up.component.html
+++ b/src/app/components/pop-up/pop-up.component.html
@@ -22,7 +22,7 @@
                     [label]="abortButtonLabel"
                     class="button column"
                     theme="secundary"
-                    (click)="onAbort()"
+                    (click)="onAbortPopUp()"
                 ></app-button>
             </div>
         </form>
