--- a/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
+++ b/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
@@ -15,7 +15,8 @@
 
     .button {
         ::ng-deep {
-            .link {
+            .link,
+            .button {
                 height: 50px;
 
                 @include mobile {
