--- a/src/app/components/pop-up/pop-up.component.scss
+++ b/src/app/components/pop-up/pop-up.component.scss
@@ -1,53 +1,86 @@
 @import 'bulma/sass/utilities/_all';
 
 :host {
-    .title {
-        color: var(--color-cosmic);
+    .layer {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.6);
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
-    .info-text {
-        font-family: Work Sans;
-        font-style: normal;
-        font-weight: 200;
-        font-size: 22px;
-        line-height: 26px;
-        text-align: center;
-        padding: 5px;
-    }
+    .pop-up-container {
+        background-color: white;
+        border-radius: 10px;
+        padding: 0px 56px 56px 56px;
 
-    .form-fields {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
         @include mobile {
-            margin-top: 33px;
-
-            .field-container {
-                margin-top: 17px;
-            }
+            margin: 0 2px 60px 2px;
         }
 
         @include tablet {
-            margin-top: 24px;
+            max-width: 1171px;
+            margin: 130px;
+            flex: 1;
+        }
 
-            .field-container {
-                margin-top: 39px;
+        .title {
+            color: var(--color-cosmic);
+        }
+
+        .info-text {
+            font-family: Work Sans;
+            font-style: normal;
+            font-weight: 200;
+            font-size: 22px;
+            line-height: 26px;
+            text-align: center;
+            padding: 5px;
+        }
+
+        .form-fields {
+            @include mobile {
+                margin-top: 33px;
+
+                .field-container {
+                    margin-top: 17px;
+                }
+            }
+
+            @include tablet {
+                margin-top: 24px;
+
+                .field-container {
+                    margin-top: 39px;
+                }
             }
         }
-    }
 
-    .button,
-    .button-submit {
-        ::ng-deep {
-            .button {
-                height: 50px;
+        .button,
+        .button-submit {
+            ::ng-deep {
+                .button {
+                    height: 50px;
 
-                @include mobile {
-                    font-size: 30px;
-                    line-height: 35px;
-                }
+                    @include mobile {
+                        font-size: 30px;
+                        line-height: 35px;
+                    }
 
-                @include tablet {
-                    width: 410px;
-                    font-size: 24px;
-                    line-height: 28px;
+                    @include tablet {
+                        width: 410px;
+                        font-size: 24px;
+                        line-height: 28px;
+                    }
                 }
             }
         }
