fix(NOUN): fix label

--- a/src/app/screens/home-screen/components/section-partners/section-partners.component.html
+++ b/src/app/screens/home-screen/components/section-partners/section-partners.component.html
@@ -3,7 +3,7 @@
 <div class="info-container">
   <div class="subtitle-container">
     <img class="icon" src="/assets/img/teamloan.svg" />
-    <p class="sub-title">Parceiros legais</p>
+    <p class="sub-title">Parceiros jurídicos</p>
   </div>
   <div class="icons-container">
     <ul>
