--- a/src/app/components/pop-up/pop-up.component.html
+++ b/src/app/components/pop-up/pop-up.component.html
@@ -2,29 +2,27 @@
     <div class="pop-up-container">
         <h1 class="title">{{ title }}</h1>
         <div class="info-text" [innerHTML]="infoText"></div>
-        <form [formGroup]="form" (submit)="onSubmit()">
-            <div class="form-fields">
-                <ng-content></ng-content>
-            </div>
-            <div class="buttons-container columns">
-                <div class="column">
-                    <div *ngIf="reponseError" class="error-message">
-                        Ocorreu um erro, por favor tente novamente!
-                    </div>
-                    <app-button
-                        [label]="confirmButtonLabel"
-                        type="submit"
-                        [iconStatus]="submitting && buttonStatus"
-                        class="button-submit"
-                    ></app-button>
+        <ng-content></ng-content>
+        <div class="buttons-container columns">
+            <div class="column">
+                <div *ngIf="responseError" class="error-message">
+                    Ocorreu um erro, por favor tente novamente!
                 </div>
                 <app-button
+                    [label]="confirmButtonLabel"
+                    class="button"
+                    [iconStatus]="submitting ? buttonStatus.LOADING : ''"
+                    (click)="onConfirmPopUp()"
+                ></app-button>
+            </div>
+            <div class="column">
+                <app-button
                     [label]="abortButtonLabel"
-                    class="button column"
+                    class="button"
                     theme="secundary"
                     (click)="onAbortPopUp()"
                 ></app-button>
             </div>
-        </form>
+        </div>
     </div>
 </div>
