--- a/src/app/components/pop-up/pop-up.component.scss
+++ b/src/app/components/pop-up/pop-up.component.scss
@@ -7,7 +7,7 @@
         left: 0px;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.6);
+        background-color: rgba(0, 0, 0, 0.8);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -16,7 +16,7 @@
     .pop-up-container {
         background-color: white;
         border-radius: 10px;
-        padding: 0px 56px 56px 56px;
+        padding: 0px 200px 56px 200px;
 
         display: flex;
         flex-direction: column;
@@ -29,7 +29,7 @@
 
         @include tablet {
             max-width: 1171px;
-            margin: 130px;
+            margin: 220px 130px 130px 130px;
             flex: 1;
         }
 
@@ -47,21 +47,15 @@
             padding: 5px;
         }
 
-        .form-fields {
+        .error-message {
             @include mobile {
-                margin-top: 33px;
-
-                .field-container {
-                    margin-top: 17px;
-                }
+                line-height: 35px;
             }
 
             @include tablet {
-                margin-top: 24px;
+                width: 380px;
 
-                .field-container {
-                    margin-top: 39px;
-                }
+                line-height: 28px;
             }
         }
 
@@ -77,7 +71,7 @@
                     }
 
                     @include tablet {
-                        width: 410px;
+                        width: 380px;
                         font-size: 24px;
                         line-height: 28px;
                     }
