--- a/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.html
+++ b/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.html
@@ -1,4 +1,4 @@
-<div class="details-container" *ngIf="closingPost">
+<div class="details-container">
     <h1 class="title">Detalhes da publicação</h1>
     <div class="form-container">
         <div class="equipa-form">
@@ -110,36 +110,39 @@
     </div>
 </div>
 <app-pop-up
-    *ngIf="!closingPost"
+    *ngIf="closingPost"
     title="Encerrar publicação"
     infoText="Quer encerrar a publicação da equipa {{
         posting.title
     }}?<br>Esta ação não pode ser revertida."
-    [form]="this.closePostForm"
     confirmButtonLabel="Encerrar publicação"
     abortButtonLabel="Manter publicação"
-    (onConfirm)="submitClosePost($event)"
+    [submitting]="submittingClosePost"
+    [responseError]="closePostResponseError"
+    (onConfirm)="onUserConfirmClosePost()"
     (onAbort)="closeClosePostPopUp()"
 >
-    <fieldset class="field-container">
-        <label class="label" for="closePostReason"
-            >Qual é o motivo para encerrar esta publicação?</label
-        >
-        <app-input-select
-            formControlName="closePostReason"
-            [inputSelectOptions]="closePostReasonOptions$ | async"
-            placeholder="Selecione o principal motivo"
-        ></app-input-select>
-        <div *ngIf="closePostReasonControl.errors.required" class="error-message">
-            Campo obrigatório
-        </div>
-    </fieldset>
-    <fieldset class="field-container">
-        <label class="label" for="closePostDetails">Detalhes</label>
-        <app-input-textarea
-            class="textarea"
-            formControlName="closePostDetails"
-            placeholder=""
-        ></app-input-textarea>
-    </fieldset>
+    <form [formGroup]="closePostForm" (submit)="onSubmitClosePostForm()" class="form-fields">
+        <fieldset class="field-container">
+            <label class="label" for="closePostReason"
+                >Qual é o motivo para encerrar esta publicação?</label
+            >
+            <app-input-select
+                formControlName="closePostReason"
+                [inputSelectOptions]="closePostReasonOptions$ | async"
+                placeholder="Selecione o principal motivo"
+            ></app-input-select>
+            <div *ngIf="closePostReasonControl.errors?.required" class="error-message">
+                Campo obrigatório
+            </div>
+        </fieldset>
+        <fieldset class="field-container">
+            <label class="label" for="closePostDetails">Detalhes</label>
+            <app-input-textarea
+                class="textarea"
+                formControlName="closePostDetails"
+                placeholder=""
+            ></app-input-textarea>
+        </fieldset>
+    </form>
 </app-pop-up>
