--- a/src/app/screens/home-screen/components/section-partners/section-partners.component.html
+++ b/src/app/screens/home-screen/components/section-partners/section-partners.component.html
@@ -3,12 +3,12 @@
 <div class="info-container">
   <div class="subtitle-container">
     <img class="icon" src="/assets/img/teamloan.svg" />
-    <p class="sub-title">Parceiros jurídicos</p>
+    <p class="sub-title">Parceiros legais</p>
   </div>
   <div class="icons-container">
-    <ul>
-      <li>
-        <a href="https://www.mlgts.pt/pt/" target="_blank"
+    <ul class="icons-list-big">
+      <li class="item">
+        <a href="https://www.mlgts.pt/pt/" target="_blank" class="item-info"
           title="Morais Leitão - Galvão Teles, Soares da Siva & Associados">
           <img class="icon" src="/assets/img/logos/morais-leitao.svg" />
         </a>
@@ -20,7 +20,7 @@
 <div class="info-container">
   <div class="subtitle-container">
     <img class="icon" src="/assets/img/teamloan.svg" />
-    <p class="sub-title">Parceiros</p>
+    <p class="sub-title">Outros parceiros</p>
   </div>
   <div class="icons-container">
     <ul class="icons-list">
@@ -35,7 +35,7 @@
 </div>
 
 <div class="presentation-link-container">
-  <app-button url="/assets/docs/teamloan-presentation.pdf"
+  <app-button url="/assets/docs/teamloan-presentation-ml.pdf"
     label="Clique aqui para consultar a apresentação" [theme]="buttonTheme"
     [newPageUrl]="true" [externalUrl]="true" class="presentation-link">
   </app-button>
