--- a/src/app/screens/home-screen/components/section-partners/section-partners.component.scss
+++ b/src/app/screens/home-screen/components/section-partners/section-partners.component.scss
@@ -1,8 +1,12 @@
 :host {
   --columns-width-desktop: 170px;
+  --sum-columns-width-tablet: 510px; // --columns-width-desktop * 3
+  --sum-columns-width-desktop: 850px; // --columns-width-desktop * 5
   --rows-width-desktop: 160px;
   --columns-width-mobile: 90px;
+  --sum-columns-width-mobile: 270px; // --columns-width-mobile * 3
   --rows-width-mobile: 80px;
+
   display: flex;
   flex-direction: column;
 
@@ -14,7 +18,6 @@
     color: var(--color-cosmic);
     margin-top: 5px;
   }
-
 
   .title {
     font-family: Work Sans;
@@ -42,13 +45,19 @@
       position: relative;
       display: flex;
       flex: 1;
-      border-left: solid 1px var(--color-cosmic);
-      padding-left: 50px;
+
+      .icons-list-big {
+        .item {
+          img {
+            max-width: 100%;
+          }
+        }
+      }
 
       .icons-list {
         .item {
           display: flex;
-          justify-content: flex-start;
+          justify-content: center;
           align-items: center;
         }
       }
@@ -67,27 +76,46 @@
   :host {
     padding: 25px 0 48px 0;
 
-    >* {
+    > * {
       padding: 0 25px 0 25px;
     }
 
     .title {
       font-size: 30px;
       line-height: 35px;
-      padding-bottom: 42px;
     }
 
     .info-container {
+      flex-direction: column;
+      justify-content: center;
+
+      .subtitle-container {
+        flex-direction: column;
+        align-items: center;
+        padding-right: 0;
+
+        .sub-title {
+          padding-top: 20px;
+          padding-bottom: 20px;
+        }
+
+        .icon {
+          display: none;
+        }
+      }
 
       .icons-container {
         justify-content: center;
+        border-left: none;
+
+        .icons-list-big {
+          width: var(--sum-columns-width-mobile);
+        }
 
         .icons-list {
           display: grid;
-          grid-template-columns:
-            var(--columns-width-mobile) var(--columns-width-mobile) var(--columns-width-mobile);
-          grid-template-rows:
-            var(--rows-width-mobile) var(--rows-width-mobile) var(--rows-width-mobile);
+          grid-template-columns: var(--columns-width-mobile) var(--columns-width-mobile) var(--columns-width-mobile);
+          grid-template-rows: var(--rows-width-mobile) var(--rows-width-mobile) var(--rows-width-mobile);
 
           .item {
             img {
@@ -112,20 +140,26 @@
     .title {
       font-size: 50px;
       line-height: 70px;
-      padding-bottom: 105px;
+      padding-bottom: 50px;
     }
 
     .info-container {
+      margin-bottom: 125px;
 
       .icons-container {
-        max-width: 1000px;
+        max-width: 561px;
         justify-content: flex-start;
+        border-left: solid 1px var(--color-cosmic);
+        padding-left: 50px;
+
+        .icons-list-big {
+          width: var(--sum-columns-width-tablet);
+        }
 
         .icons-list {
           display: grid;
-          grid-template-columns:
-            var(--columns-width-desktop) var(--columns-width-desktop) var(--columns-width-desktop) var(--columns-width-desktop) var(--columns-width-desktop);
-          grid-template-rows: var(--rows-width-desktop) var(--rows-width-desktop);
+          grid-template-columns: var(--columns-width-desktop) var(--columns-width-desktop) var(--columns-width-desktop);
+          grid-template-rows: var(--rows-width-desktop) var(--rows-width-desktop) var(--rows-width-desktop) var(--rows-width-desktop) var(--rows-width-desktop);
 
           .item {
             img {
@@ -144,11 +178,35 @@
   }
 }
 
-@media all and (min-width: 1064px) {
+@media all and (min-width: 1200px) {
   :host {
     .info-container {
+      margin-bottom: 125px;
+
       .icons-container {
-        padding-bottom: 50px;
+        max-width: 1000px;
+        justify-content: flex-start;
+        border-left: solid 1px var(--color-cosmic);
+        padding-left: 50px;
+
+        .icons-list-big {
+          width: var(--sum-columns-width-desktop);
+        }
+
+        .icons-list {
+          display: grid;
+          grid-template-columns: var(--columns-width-desktop) var(--columns-width-desktop) var(--columns-width-desktop) var(
+              --columns-width-desktop
+            ) var(--columns-width-desktop);
+          grid-template-rows: var(--rows-width-desktop) var(--rows-width-desktop) var(--rows-width-desktop);
+
+          .item {
+            img {
+              max-width: 145px;
+              max-height: 135px;
+            }
+          }
+        }
       }
     }
   }
