--- a/src/app/screens/home-screen/components/section-partners/section-partners.component.scss
+++ b/src/app/screens/home-screen/components/section-partners/section-partners.component.scss
@@ -1,161 +1,231 @@
 :host {
-    --columns-width-desktop: 170px;
-    --rows-width-desktop: 160px;
-    --columns-width-mobile: 90px;
-    --rows-width-mobile: 80px;
+  --columns-width-desktop: 170px;
+  --sum-columns-width-tablet: 510px; // --columns-width-desktop * 3
+  --sum-columns-width-desktop: 850px; // --columns-width-desktop * 5
+  --rows-width-desktop: 160px;
+  --columns-width-mobile: 90px;
+  --sum-columns-width-mobile: 270px; // --columns-width-mobile * 3
+  --rows-width-mobile: 80px;
+
+  display: flex;
+  flex-direction: column;
+
+  .sub-title {
+    font-family: Work Sans;
+    font-style: normal;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: var(--color-cosmic);
+    margin-top: 5px;
+  }
+
+  .title {
+    font-family: Work Sans;
+    font-style: normal;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: var(--color-cosmic);
+  }
+
+  .info-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 25px;
 
-    .title {
-        font-family: Work Sans;
-        font-style: normal;
-        font-weight: bold;
-        text-transform: uppercase;
-        color: var(--color-cosmic);
+    .subtitle-container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding-right: 50px;
+      flex-basis: 20%;
     }
 
-    .info-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+    .icons-container {
+      position: relative;
+      display: flex;
+      flex: 1;
 
-        .icons-container {
-            position: relative;
-            display: flex;
-            flex: 1;
-
-            .background-lines {
-                position: absolute;
-                z-index: -1;
-            }
-
-            .icons-list {
-                .item {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                }
-            }
+      .icons-list-big {
+        .item {
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
-    }
+      }
 
-    .presentation-link-container {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        margin-top: 52px;
+      .icons-list {
+        .item {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+      }
     }
+  }
+
+  .presentation-link-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 52px;
+  }
 }
 
 @media all and (max-width: 899px) {
-    :host {
-        padding: 25px 0 48px 0;
+  :host {
+    padding: 25px 0 48px 0;
 
-        > * {
-            padding: 0 25px 0 25px;
-        }
-
-        .title {
-            font-size: 30px;
-            line-height: 35px;
-            padding-bottom: 42px;
-        }
-
-        .info-container {
-            .icons-container {
-                justify-content: center;
-
-                .background-lines {
-                    display: none;
-                }
-
-                .icons-list {
-                    display: grid;
-                    grid-template-columns:
-                        var(--columns-width-mobile)
-                        var(--columns-width-mobile)
-                        var(--columns-width-mobile);
-                    grid-template-rows:
-                        var(--rows-width-mobile)
-                        var(--rows-width-mobile)
-                        var(--rows-width-mobile);
-
-                    .item {
-                        img {
-                            max-width: 70px;
-                            max-height: 60px;
-                        }
-                    }
-                }
-            }
-        }
-
-        .presentation-link-container {
-            padding: 0;
-        }
+    > * {
+      padding: 0 25px 0 25px;
     }
+
+    .title {
+      font-size: 30px;
+      line-height: 35px;
+    }
+
+    .info-container {
+      flex-direction: column;
+      justify-content: center;
+
+      .subtitle-container {
+        flex-direction: column;
+        align-items: center;
+        padding-right: 0;
+
+        .sub-title {
+          padding-top: 20px;
+          padding-bottom: 20px;
+        }
+
+        .icon {
+          display: none;
+        }
+      }
+
+      .icons-container {
+        justify-content: center;
+        border-left: none;
+
+        .icons-list-big {
+          width: var(--sum-columns-width-mobile);
+
+          .item {
+            padding-top: 10px;
+            padding-bottom: 10px;
+            img {
+              max-width: 100%;
+              max-height: 100px;
+            }
+          }
+        }
+
+        .icons-list {
+          display: grid;
+          grid-template-columns: var(--columns-width-mobile) var(--columns-width-mobile) var(--columns-width-mobile);
+          grid-template-rows: var(--rows-width-mobile) var(--rows-width-mobile) var(--rows-width-mobile);
+
+          .item {
+            img {
+              max-width: 70px;
+              max-height: 60px;
+            }
+          }
+        }
+      }
+    }
+
+    .presentation-link-container {
+      padding: 0;
+    }
+  }
 }
 
 @media all and (min-width: 900px) {
-    :host {
-        padding: 54px 60px 130px 60px;
+  :host {
+    padding: 54px 60px 130px 60px;
 
-        .title {
-            font-size: 50px;
-            line-height: 70px;
-            padding-bottom: 105px;
-        }
-
-        .info-container {
-            align-items: center;
-
-            .icons-container {
-                max-width: 1000px;
-                justify-content: flex-end;
-
-                .background-lines {
-                    display: none;
-                }
-
-                .icons-list {
-                    display: grid;
-                    grid-template-columns:
-                        var(--columns-width-desktop)
-                        var(--columns-width-desktop)
-                        var(--columns-width-desktop)
-                        var(--columns-width-desktop)
-                        var(--columns-width-desktop);
-                    grid-template-rows: var(--rows-width-desktop) var(--rows-width-desktop);
-
-                    .item {
-                        img {
-                            max-width: 145px;
-                            max-height: 135px;
-                        }
-                    }
-                }
-            }
-        }
-
-        .presentation-link {
-            width: 100%;
-            max-width: 969px;
-        }
+    .title {
+      font-size: 50px;
+      line-height: 70px;
+      padding-bottom: 50px;
     }
+
+    .info-container {
+      margin-bottom: 125px;
+
+      .icons-container {
+        max-width: 561px;
+        justify-content: flex-start;
+        border-left: solid 1px var(--color-cosmic);
+        padding-left: 50px;
+
+        .icons-list-big {
+          width: var(--sum-columns-width-tablet);
+
+          .item {
+            padding-top: 10px;
+            padding-bottom: 10px;
+            img {
+              max-width: 100%;
+              max-height: 250px;
+            }
+          }
+        }
+
+        .icons-list {
+          display: grid;
+          grid-template-columns: var(--columns-width-desktop) var(--columns-width-desktop) var(--columns-width-desktop);
+          grid-template-rows: var(--rows-width-desktop) var(--rows-width-desktop) var(--rows-width-desktop) var(--rows-width-desktop) var(--rows-width-desktop);
+
+          .item {
+            img {
+              max-width: 145px;
+              max-height: 135px;
+            }
+          }
+        }
+      }
+    }
+
+    .presentation-link {
+      width: 100%;
+      max-width: 969px;
+    }
+  }
 }
 
-@media all and (min-width: 1064px) {
-    :host {
-        .info-container {
-            .icons-container {
-                padding-bottom: 50px;
+@media all and (min-width: 1200px) {
+  :host {
+    .info-container {
+      margin-bottom: 125px;
 
-                .background-lines {
-                    display: block;
-                    bottom: 0;
-                    left: -40px;
-                }
-            }
+      .icons-container {
+        max-width: 1000px;
+        justify-content: flex-start;
+        border-left: solid 1px var(--color-cosmic);
+        padding-left: 50px;
+
+        .icons-list-big {
+          width: var(--sum-columns-width-desktop);
         }
+
+        .icons-list {
+          display: grid;
+          grid-template-columns: var(--columns-width-desktop) var(--columns-width-desktop) var(--columns-width-desktop) var(
+              --columns-width-desktop
+            ) var(--columns-width-desktop);
+          grid-template-rows: var(--rows-width-desktop) var(--rows-width-desktop) var(--rows-width-desktop);
+
+          .item {
+            img {
+              max-width: 145px;
+              max-height: 135px;
+            }
+          }
+        }
+      }
     }
+  }
 }
