--- a/src/app/components/pop-up/pop-up.component.scss
+++ b/src/app/components/pop-up/pop-up.component.scss
@@ -8,6 +8,7 @@
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.8);
+
         display: flex;
         justify-content: center;
         align-items: center;
@@ -24,10 +25,16 @@
         justify-content: center;
 
         @include mobile {
-            margin: 0 2px 60px 2px;
+            margin: 200px 2px 60px 2px;
+            flex: 1;
         }
 
         @include tablet {
+            margin: 100px 130px 130px, 130px;
+            flex: 1;
+        }
+
+        @include desktop {
             max-width: 1171px;
             margin: 220px 130px 130px 130px;
             flex: 1;
@@ -59,21 +66,24 @@
             }
         }
 
-        .button,
-        .button-submit {
-            ::ng-deep {
-                .button {
-                    height: 50px;
+        .buttons-container {
+            display: flex;
+            align-items: flex-end;
+            .button {
+                ::ng-deep {
+                    .button {
+                        @include mobile {
+                            font-size: 24px;
+                            line-height: 30px;
+                            height: 70px;
+                        }
 
-                    @include mobile {
-                        font-size: 30px;
-                        line-height: 35px;
-                    }
-
-                    @include tablet {
-                        width: 380px;
-                        font-size: 24px;
-                        line-height: 28px;
+                        @include tablet {
+                            height: 50px;
+                            width: 380px;
+                            font-size: 24px;
+                            line-height: 28px;
+                        }
                     }
                 }
             }
