--- a/src/app/components/pop-up/pop-up.component.html
+++ b/src/app/components/pop-up/pop-up.component.html
@@ -4,7 +4,7 @@
         <div class="info-text" [innerHTML]="infoText"></div>
         <ng-content></ng-content>
         <div class="buttons-container columns">
-            <div class="column">
+            <div class="column" *ngIf="confirmButtonLabel">
                 <div *ngIf="responseError" class="error-message">
                     Ocorreu um erro, por favor tente novamente!
                 </div>
@@ -15,7 +15,7 @@
                     (click)="onConfirmPopUp()"
                 ></app-button>
             </div>
-            <div class="column">
+            <div class="column" *ngIf="abortButtonLabel">
                 <app-button
                     [label]="abortButtonLabel"
                     class="button"
