--- a/src/app/screens/home-screen/components/section-lender/section-lender.component.html
+++ b/src/app/screens/home-screen/components/section-lender/section-lender.component.html
@@ -11,7 +11,7 @@
         <div class="item-info">
             <img class="icon" src="/assets/img/home/lender-icon-message.svg" />
             <div class="label">
-                Procuro e contacto empresas que precisem de equipa.
+                Procuro e contacto outras empresas que precisem de ajuda.
             </div>
         </div>
     </li>
