--- a/src/app/screens/home-screen/components/section-seeker/section-seeker.component.html
+++ b/src/app/screens/home-screen/components/section-seeker/section-seeker.component.html
@@ -4,7 +4,7 @@
     <li class="item">
         <div class="item-info">
             <img class="icon" src="/assets/img/home/seeker-icon-group.svg" />
-            <div class="label">Registo o meu pedido de equipa na TeamLoan.</div>
+            <div class="label">Registo a minha necessidade de equipa na TeamLoan.</div>
         </div>
     </li>
     <li class="item">
