--- a/src/app/screens/home-screen/components/section-lender/section-lender.component.html
+++ b/src/app/screens/home-screen/components/section-lender/section-lender.component.html
@@ -10,7 +10,9 @@
     <li class="item">
         <div class="item-info">
             <img class="icon" src="/assets/img/home/lender-icon-message.svg" />
-            <div class="label">Aguardo contacto de outras empresas que precisem de equipa.</div>
+            <div class="label">
+                Procuro e contacto outras empresas que precisem de ajuda.
+            </div>
         </div>
     </li>
     <li class="item">
