--- a/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.html
+++ b/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.html
@@ -130,7 +130,7 @@
                 [inputSelectOptions]="closeReasonOptions"
                 placeholder="Selecione o motivo"
             ></app-input-select>
-            <div *ngIf="closeReasonControl?.errors?.required" class="error-message">
+            <div *ngIf="submitted && closeReasonControl?.errors?.required" class="error-message">
                 Campo obrigatório
             </div>
         </fieldset>
