card 141 - register title padding

--- a/src/app/screens/register/register-screen.component.html
+++ b/src/app/screens/register/register-screen.component.html
@@ -1,4 +1,4 @@
-<h1 class="title">Registar</h1>
+<h1 class="title">Registo</h1>
 
 <div class="register-form-container">
     <app-register-form (submitEvent)="onSubmit($event)" [businessAreas]="businessAreaOptions">
