FAQS review fixes

--- a/src/app/screens/faqs/components/item-list/item-list.component.html
+++ b/src/app/screens/faqs/components/item-list/item-list.component.html
@@ -1,9 +1,9 @@
 <div *ngFor="let item of items; index as i;">
-    <p class="q">
-        <span>{{item.q}}</span> 
-        <img [attr.src]="(i==this.curr_item)?this.icon_plus:this.icon_minus" (click)="onClickItem(i)" />
+    <p class="q" (click)="onClickItem(i)">
+        <span [innerHTML]="(item.q)"></span>
+        <img [attr.src]="(i==this.curr_item)?this.icon_minus:this.icon_plus"/>
     </p>
     <p class="a" *ngIf="i==this.curr_item">
-        <span>{{item.a}}</span> 
+        <span [innerHTML]="(item.a)"></span>
     </p>
 </div>
