--- a/src/app/screens/faqs/components/item-list/item-list.component.scss
+++ b/src/app/screens/faqs/components/item-list/item-list.component.scss
@@ -3,12 +3,12 @@ span {
     font-family: Work Sans;
     font-style: normal;
     font-weight: normal;
-  
+
     /* or 233% */
     letter-spacing: -0.065em;
 
     color: #000000;
-   
+
 
 }
 
@@ -17,9 +17,10 @@ p.q {
     line-height: 70px;
     color: #000000;
     padding-left: 50px;
+    cursor: pointer;
 }
 
-p.a { 
+p.a {
     font-size: 24px;
     line-height: 70px;
     color: #414141;
