--- a/src/app/screens/faqs/faqs.component.html
+++ b/src/app/screens/faqs/faqs.component.html
@@ -1,9 +1,15 @@
 <div class="left">
-    <p>DÚVIDAS?</p>
-    <p>VAMOS ESCLATECER.</p>
+  <p>DÚVIDAS?</p>
+  <p>VAMOS ESCLATECER.</p>
 </div>
 <div class="right">
-    <img src="/assets/img/faqs-artboard.png" />
+  <img src="/assets/img/faqs-artboard.png" />
 </div>
 <app-faq-list [faqs]=faqsa [faq]=faq></app-faq-list>
-<app-item-list [items]=faq.items ></app-item-list>
+<app-item-list [items]=faq.items></app-item-list>
+<div id="faqs-footer">
+  <div id="faqs-footer-content">
+    Texto atualizado à data 29 Maio 2020, elaborado pela TeamLoan com o apoio da "Morais Leitão, Galvão Teles, Soares da
+    Silva & Associados", não constituindo, em caso algum, aconselhamento jurídico.
+  </div>
+</div>
