--- a/src/app/screens/faqs/faqs.component.scss
+++ b/src/app/screens/faqs/faqs.component.scss
@@ -1,3 +1,4 @@
+
 // center DUVIDAS? VAMOS ESCLATECER
 div.left {
     margin: auto;
@@ -16,7 +17,67 @@ div.right {
     margin-bottom: 50px;
 }
 
-p {
+div.thin {
+  width: 96%;
+  height: 400px;
+  left: 2%;
+}
+
+div.thintitle {
+  padding-top: 40px;
+  padding-left: 50px;
+  font-family: Work Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  //display: flex;
+  align-items: center;
+  letter-spacing: 0.075em;
+  color: #663366;
+}
+
+div.center2 {
+  position: absolute;
+  left: 1%;
+  right: 1%;
+  top: 0%;
+  bottom: 90%;
+  z-index: -1;
+}
+
+div.center1 {
+  position: absolute;
+  width: 80%;
+  height: 210px;
+  left: 5%;
+  top: 5%;
+}
+
+
+div.center {
+    margin: auto;
+    width: 90%;
+    float: left;
+    padding-top: 10px;
+    margin-bottom: 10px;
+}
+
+p.thin {
+  font-family: Work Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 50px;
+
+  text-align: center;
+  letter-spacing: -0.035em;
+  text-transform: uppercase;
+
+  color: #FFFFFF
+}
+
+p.wide {
     font-family: Work Sans;
     font-style: normal;
     font-weight: bold;
