--- a/src/app/screens/faqs/faqs.component.html
+++ b/src/app/screens/faqs/faqs.component.html
@@ -1,12 +1,30 @@
-<div class="left">
-  <p>DÚVIDAS?</p>
-  <p>VAMOS ESCLATECER.</p>
+<div *ngIf="isWide; else faqsElseTemplate">
+  <div class="left">
+    <p class="wide">DÚVIDAS? VAMOS ESCLATECER.</p>
+  </div>
+  <div class="right">
+    <img src="/assets/img/faqs-artboard.png" />
+  </div>
+  <app-faq-list [faqs]=faqsa [faq]=faq></app-faq-list>
+  <app-item-list [items]=faq.items></app-item-list>
 </div>
-<div class="right">
-  <img src="/assets/img/faqs-artboard.png" />
-</div>
-<app-faq-list [faqs]=faqsa [faq]=faq></app-faq-list>
-<app-item-list [items]=faq.items></app-item-list>
+
+<ng-template #faqsElseTemplate>
+  <div class="thin">
+    <div class="center1">
+      <p class="thin">DÚVIDAS?  VAMOS ESCLATECER.</p>
+    </div>
+    <div class="center2">
+      <img src="/assets/img/faqs-artboard.png" />
+    </div>
+  </div>
+  <ng-container *ngFor="let categ of faqsa">
+    <div class="thintitle">{{categ.desc | uppercase}}</div>
+    <hr/>
+    <app-item-list [items]=categ.items ></app-item-list>
+  </ng-container>
+</ng-template>
+
 <div id="faqs-footer">
   <div id="faqs-footer-content">
     Texto atualizado à data 29 Maio 2020, elaborado pela TeamLoan com o apoio da "Morais Leitão, Galvão Teles, Soares da
