FAQS addedd link to faqs in home-about

--- a/src/app/screens/home-screen/components/section-about/section-about.component.html
+++ b/src/app/screens/home-screen/components/section-about/section-about.component.html
@@ -6,5 +6,7 @@
             TeamLoan é uma plataforma grátis onde qualquer empresa, desde pequenos estabelecimentos
             comerciais a grandes empresas, pode registar-se para partilhar equipas temporariamente.
         </p>
+        <a class="text" [routerLink]="['/faqs']">Dúvidas? Consulte as nossas FAQ’s&nbsp;
+       <img src="/assets/img/icons/arrow.svg"/></a>
     </div>
 </div>
