Fix typo and add margin to FAQs

--- a/src/app/screens/faqs/components/item-list/item-list.component.html
+++ b/src/app/screens/faqs/components/item-list/item-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let item of items; index as i;">
+<div class="wrapper" *ngFor="let item of items; index as i;">
     <p class="q" (click)="onClickItem(i)">
         <span [innerHTML]="(item.q)"></span>
         <img [attr.src]="(i==this.curr_item)?this.icon_minus:this.icon_plus"/>
