--- a/src/app/screens/faqs/faqs.component.html
+++ b/src/app/screens/faqs/faqs.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isWide; else faqsElseTemplate">
   <div class="left">
-    <p class="wide">DÚVIDAS? VAMOS ESCLATECER.</p>
+    <p class="wide">DÚVIDAS?<br>VAMOS ESCLARECER.</p>
   </div>
   <div class="right">
     <img src="/assets/img/faqs-artboard.png" />
@@ -12,7 +12,7 @@
 <ng-template #faqsElseTemplate>
   <div class="thin">
     <div class="center1">
-      <p class="thin">DÚVIDAS?  VAMOS ESCLATECER.</p>
+      <p class="thin">DÚVIDAS?<br>VAMOS ESCLARECER.</p>
     </div>
     <div class="center2">
       <img src="/assets/img/faqs-artboard.png" />
